# scopeproof

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/python_cli/: README.md  scopeproof.yml
examples/python_cli/.scopeproof/: task.yml
scopeproof/: __init__.py  __main__.py  cli.py  config.py  errors.py  git.py  models.py  paths.py
scopeproof/checks/: __init__.py  base.py  changed_file_growth.py  duplicate_symbol.py  module_sprawl.py  orphan_new_file.py  parse_error.py  public_api_growth.py  runner.py  scope_escape.py
scopeproof/indexer/: python_ast.py  symbols.py
scopeproof/prompt/: generate.py
scopeproof/report/: console.py  json_report.py  markdown.py
scopeproof/templates/: AGENTS.md  __init__.py  scopeproof.yml  task.yml
tests/: conftest.py  test_changed_file_growth.py  test_cli_check.py  test_config.py  test_duplicate_symbol.py  test_git.py  test_module_sprawl.py  test_orphan_new_file.py  test_parse_error.py  test_paths.py  test_prompt_generate.py  test_public_api_growth.py  test_python_ast_indexer.py  test_scope_escape.py
