[project]
name = "scopeproof"
version = "0.1.2"
description = "A tiny scope and architecture guardrail for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ScopeProof Contributors" }]
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "rich>=13.0",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
scopeproof = "scopeproof.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"scopeproof.templates" = ["*.yml", "*.md"]
